--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,15 +21,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-    /*sourceSets {
-        main {
-            jniLibs.srcDirs = ['libs']
-        }
-    }*/
+
 }
 
 dependencies {
-    //implementation fileTree(include: ['*.jar', '*.so'], dir: 'libs')
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:27.0.2'
@@ -42,5 +37,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
     implementation 'io.reactivex.rxjava2:rxjava:2.1.8'
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
-    implementation project(':aRBaseLib')
+    compile project(':arcore')
 }
