--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,5 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
     implementation 'com.google.ar:core:0.91.0'
     implementation 'javax.vecmath:vecmath:1.5.2'
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
