--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdkVersion 27
     buildToolsVersion "27.0.0"
     defaultConfig {
-        applicationId "com.example.johnny.ar_thing"
+        applicationId "tech.ardraw.app"
         minSdkVersion 23
         targetSdkVersion 27
         versionCode 1
